--- a/Works.csproj
+++ b/Works.csproj
@@ -62,8 +62,16 @@
     <Compile Include="Edit.xaml.cs">
       <DependentUpon>Edit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Join.xaml.cs">
+      <DependentUpon>Join.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Service.cs" />
+    <Compile Include="User.cs" />
     <Page Include="Edit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Join.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
